--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo_img"/>
     <EditText
         android:id="@+id/edtLoginName"
         android:layout_marginTop="50dp"
