--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,59 +9,61 @@
         tools:context=".LoginActivity">
 <ImageView
     android:id="@+id/imgLoginLogo"
-    android:layout_marginTop="24dp"
+    android:layout_marginTop="70dp"
     android:layout_gravity="center_horizontal"
-    android:layout_width="200dp"
+    android:layout_width="250dp"
     android:layout_height="100dp"
     android:src="@drawable/logo_img"/>
     <EditText
-
+android:layout_gravity="center_horizontal"
         android:id="@+id/edtLoginID"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="70dp"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
         android:paddingLeft="10dp"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="@drawable/gray"
-        android:hint="ID"/>
+        android:hint="아이디"/>
     <EditText
-        android:layout_marginTop="4dp"
+
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="12dp"
         android:paddingLeft="10dp"
         android:background="@drawable/gray"
         android:id="@+id/edtLoginPW"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="40dp"
-        android:hint="PW"/>
+        android:hint="패스워드"/>
     <Button
+        android:textStyle="bold"
+        android:textColor="#ffffff"
         android:id="@+id/btnLoginSubmit"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
         android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/gray_border"
         android:text="로그인"/>
-    <LinearLayout
-        android:layout_gravity="center_horizontal"
+
+    <TextView
+        android:id="@+id/txtLoginInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="12dp"
+        android:text="아직 솝트 회원이 아니십니까?!!"
+        android:textColor="#B9BCBE" />
         <TextView
-            android:id="@+id/txtLoginInfo"
-            android:layout_marginTop="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아직 회원이 아니십니까?"/>
-        <TextView
+            android:layout_gravity="center_horizontal"
             android:id="@+id/txtLoginSignup"
-            android:layout_marginTop="24dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="회원가입"/>
-    </LinearLayout>
+
 </LinearLayout>
