--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,24 @@
         android:layout_height="1dp"
         android:background="#DBDBDB"/>
 
-<ImageView
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:src="@drawable/newview"/>
+    android:orientation="vertical"
+    android:layout_height="300dp">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/photos_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp"
+        android:id="@+id/tab_layout" />
+</LinearLayout>
     <View
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
