I made a cartoon view using recycler view, I used bundle to transfer data between fragments, and I used indicator to go over pictures.

--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -3,5 +3,6 @@
 
     <item android:drawable="@drawable/selected_dot"
         android:state_selected="true"/>
-    <item android:drawable="@drawable/default_dot"/>
+    <item android:drawable="@drawable/default_dot"
+        android:state_selected="false"/>
 </selector>
