--- a/app/src/main/res/layout/toolbar_product.xml
+++ b/app/src/main/res/layout/toolbar_product.xml
@@ -10,6 +10,23 @@
         android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+<ImageView
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:id="@+id/btn_toolbar_product_back"
+    android:src=""
+    />
+        <TextView
+            android:id="@+id/txt_toolbar_product_title"
+            android:layout_width="wrap_content"
+            android:paddingLeft="20dp"
+            android:text="title"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="16dp"
+            android:textColor="#484848"
+            android:textStyle="bold"/>
+
 
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
