--- a/app/src/main/res/layout/toolbar_product.xml
+++ b/app/src/main/res/layout/toolbar_product.xml
@@ -14,7 +14,8 @@
     android:layout_width="20dp"
     android:layout_height="20dp"
     android:id="@+id/btn_toolbar_product_back"
-    android:src=""
+    android:src="@drawable/back_btn"
+    android:layout_weight="0"
     />
         <TextView
             android:id="@+id/txt_toolbar_product_title"
@@ -26,7 +27,10 @@
             android:textSize="16dp"
             android:textColor="#484848"
             android:textStyle="bold"/>
-
+<ImageView
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:src="@drawable/heart_selector"/>
 
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
