--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -11,6 +11,7 @@
     layout="@layout/toolbar_product"
     />
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
