--- a/app/src/main/res/layout/rv_item_product_overview.xml
+++ b/app/src/main/res/layout/rv_item_product_overview.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/rv_product_overview_all">
 
     <LinearLayout
         android:id="@+id/ll_rv_item_product_overview_container"
