--- a/app/src/main/res/layout/toolbar_product.xml
+++ b/app/src/main/res/layout/toolbar_product.xml
@@ -21,7 +21,7 @@
             android:id="@+id/txt_toolbar_product_title"
             android:layout_width="wrap_content"
             android:paddingLeft="20dp"
-            android:text="title"
+            android:text="무너의삶"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="16dp"
