--- a/app/src/main/res/layout/rv_item_product_webtoon.xml
+++ b/app/src/main/res/layout/rv_item_product_webtoon.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="74dp">
+    android:layout_width="wrap_content"
+    android:id="@+id/rl_product_all"
+    android:layout_height="74dp">
 
     <View
         android:id="@+id/v_top"
