--- a/app/src/main/res/layout/activity_write_comment.xml
+++ b/app/src/main/res/layout/activity_write_comment.xml
@@ -31,6 +31,7 @@
         android:layout_height="100dp">
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/iv_write_write_roll"
             android:layout_width="90dp"
             android:layout_height="90dp"
